THE FEET PICS, VERONICA

--- a/problem-set-4.html
+++ b/problem-set-4.html
@@ -16,7 +16,7 @@
       <h1>PROBLEM SET 4</h1>
       <hr/>
     </div>
-
+<!--THE FEET PICS, VERONICA -->
     <div class="exercise" id="exercise1">
       <button onclick="hello();">Hello</button>
 
